refactor: add file_name parameter in game_controller endpoints
