# controller/game_controller.py
@@ -1,10 +1,10 @@
 from service.parser_service import file_reader
 import service.game_service as game_service
 
-def list_all():
-    games = file_reader("test.log")
+def list_all(file_name):
+    games = file_reader(file_name)
     return game_service.create_json_list(games)
 
-def get_game(game_number):
-    game = game_service.find_game(file_reader("test.log"), game_number)
+def get_game(file_name, game_number):
+    game = game_service.find_game(file_reader(file_name), game_number)
     return game_service.create_json(game)        
